adjusting site plan

--- a/site-plan.html
+++ b/site-plan.html
@@ -20,11 +20,11 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>The purpose of this site is to advertise my resume and portfolio of work. The design is meant to cause those whom I am interviewing with to desire a professional relationship with me.</p>  <!-- change this -->
+      <p>The purpose of this site is to advertise a part of my portfolio. The design is meant to cause those whom I am interviewing with to desire a professional relationship with me as well as to use my site for personal life coaching.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>My audience will include prospective employers as well as industries with which I would like to establish a consulting relationship with.</p>  <!-- change this -->
+      <p>My audience will include friends desiring a boost to their levels of happiness, prospective employers as well as industries with which I would like to establish a consulting relationship.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
