--- a/site-plan.html
+++ b/site-plan.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-us">
     
@@ -20,7 +19,7 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>The purpose of this site is to advertise a part of my portfolio. The design is meant to cause those whom I am interviewing with to desire a professional relationship with me as well as to use my site for personal life coaching.</p>  <!-- change this -->
+      <p>The purpose of this site is to provide growth structure in which a user can more intentionally pursue what matters to them.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
@@ -60,7 +59,7 @@
           <td class="accent1">#9df375</td>
           <td class="accent2">#F7E9CF</td>
           <td class="accent3">#D9F4F3</td>
-          <td class="accent4">#000000</td>
+          <td class="accent4">black</td>
           <td class="accent5">#B4091E</td>
         </tr>
       </table>
@@ -98,9 +97,8 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Vision</a>       <a href="#">Steps</a>
+        <a href="#">Plan</a>
       </nav>
       <hr>
       <h2>
