--- a/site-plan.html
+++ b/site-plan.html
@@ -3,7 +3,7 @@
     
   <head>
     <meta charset="utf-8">
-    <title>For Job Interviews</title>
+    <title>Interviews</title>
     <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
   </head>
 
