--- a/site-plan.html
+++ b/site-plan.html
@@ -97,8 +97,8 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Vision</a>       <a href="#">Steps</a>
-        <a href="#">Plan</a>
+        <a href="#">Home</a>       <a href="#">Vision</a>
+        <a href="#">Steps</a>
       </nav>
       <hr>
       <h2>
@@ -109,10 +109,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Vision <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Steps  <!-- change this -->
         </div>
 
         <div class="top">
@@ -132,33 +132,35 @@
       <h2>
         Content
       </h2>
-      <h3>Home page</h3>
-      <p>
-        [Written copy for the home page here]
-      </p>
-      <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+      <div class="content">
+        <h3>Home page</h3>
+        <p>
+          Have you ever felt trapped with now way out of your current situation? Have you ever felt like you were living in and yet missing out on your own life? Right here and right now is exactly where you need to begin. Take a measure of where you are at in comparison to where you would like to be. Are you far away? How far? What is different about future you versus you today? What characteristics are different? Now take a leap of faith: adjust your vision to be only the internal characteristics. In other words, "Who do you want to be? What do you want to feel about yourself, others, your principles, and maybe even your deity?" 
+        </p>
+        <p>Images for the Home page</p>
+          <img src="images/hopeful_path.jpg" alt="image for homepage">
+          <img src="#" alt="image for homepage">
 
-      </ul>
-      <h3>[Page 2]</h3>
-      <p>
-        [Written copy for the Page 2 here]
-      </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        </ul>
+        <h3>Vision</h3>
+        <p>
+          [Written copy for the Page 2 here]
+        </p>
+        <p>Images for the Page 2</p>
+          <img src="#" alt="image for page">
+          <img src="#" alt="image for page">
 
-      </ul>
-      <h3>[Page 3]</h3>
-      <p>
-        [Written copy for the Page 3 here]
-      </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        </ul>
+        <h3>[Page 3]</h3>
+        <p>
+          [Written copy for the Page 3 here]
+        </p>
+        <p>Images for the Page 3</p>
+          <img src="#" alt="image for page3">
+          <img src="#" alt="image for page3">
 
-      </ul>
+        </ul>
+      </div>
       <hr>
       <h2>
         Wireframes
