adjusted page names

--- a/site-plan.html
+++ b/site-plan.html
@@ -3,7 +3,7 @@
     
   <head>
     <meta charset="utf-8">
-    <title>Interviews</title>
+    <title>Site-Plan</title>
     <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
   </head>
 
@@ -19,11 +19,11 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>The purpose of this site is to provide growth structure in which a user can more intentionally pursue what matters to them.</p>  <!-- change this -->
+      <p>The purpose of this site is to provide growth structure in which a user can more intentionally pursue personal happiness.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>My audience will include friends desiring a boost to their levels of happiness, prospective employers as well as industries with which I would like to establish a consulting relationship.</p>  <!-- change this -->
+      <p>My audience will include friends desiring a boost to their levels of happiness, prospective employers as well as psychological industries with which I would like to establish a consulting relationship.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
@@ -97,7 +97,7 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>       <a href="#">Vision</a>
+        <a href="#">Vision</a>       <a href="#">Vision</a>
         <a href="#">Steps</a>
       </nav>
       <hr>
@@ -105,14 +105,14 @@
         Site Map
       </h2>
       <div class="sitemap">
-        <div class="sm-home">
-          Home
+        <div class="sm-Vision">
+          Vision
         </div>
         <div class="sm-page2">
-          Vision <!-- change this -->
+          Reconnect <!-- change this -->
         </div>
         <div class="sm-page3">
-          Steps  <!-- change this -->
+          Action  <!-- change this -->
         </div>
 
         <div class="top">
@@ -133,16 +133,16 @@
         Content
       </h2>
       <div class="content">
-        <h3>Home page</h3>
+        <h3>Vision</h3>
         <p>
           Have you ever felt trapped with now way out of your current situation? Have you ever felt like you were living in and yet missing out on your own life? Right here and right now is exactly where you need to begin. Take a measure of where you are at in comparison to where you would like to be. Are you far away? How far? What is different about future you versus you today? What characteristics are different? Now take a leap of faith: adjust your vision to be only the internal characteristics. In other words, "Who do you want to be? What do you want to feel about yourself, others, your principles, and maybe even your deity?" 
         </p>
-        <p>Images for the Home page</p>
-          <img src="images/hopeful_path.jpg" alt="image for homepage">
-          <img src="#" alt="image for homepage">
+        <p>Images for the Vision page</p>
+          <img src="images/hopeful_path.jpg" alt="image for Vision page">
+          <img src="#" alt="image for Vision page">
 
         </ul>
-        <h3>Vision</h3>
+        <h3>Reconnect</h3>
         <p>
           [Written copy for the Page 2 here]
         </p>
@@ -151,7 +151,7 @@
           <img src="#" alt="image for page">
 
         </ul>
-        <h3>[Page 3]</h3>
+        <h3>Action</h3>
         <p>
           [Written copy for the Page 3 here]
         </p>
@@ -168,11 +168,11 @@
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
 
-      <h3>Home</h3>
+      <h3>Vision</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        [Any additional details about Vision that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="#" alt="Vision page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
