--- a/site-plan.html
+++ b/site-plan.html
@@ -3,13 +3,13 @@
     
   <head>
     <meta charset="utf-8">
-    <title>Site-Plan</title>
+    <title>Site-Plan | My God 101 </title>
     <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
   </head>
 
   <body class="background">
     <header>
-      <h1>Interviews</h1>
+      <h1>My God 101</h1>
       <h2>Riley Armstrong</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
@@ -19,17 +19,17 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>The purpose of this site is to provide growth structure in which a user can more intentionally pursue personal happiness.</p>  <!-- change this -->
+      <p>The purpose of this site is to encourage others towards my God who freely gives his people guidelines to life, liberty, and the pursuit of happiness.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>My audience will include friends desiring a boost to their levels of happiness, prospective employers as well as psychological industries with which I would like to establish a consulting relationship.</p>  <!-- change this -->
+      <p>My audience includes everyone of all creeds, religions, genders, sexes, and so on.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/Designer (2).jpeg" alt="Logo image">
+      <img src="images/broken-chains.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -54,13 +54,12 @@
         </tr>
         <!-- Switch to the site-plan.css file and change your colors there. -->
         <tr>
-          <td class="primary">#316B34</td>
-          <td class="secondary">#481D0F</td>
-          <td class="accent1">#9df375</td>
-          <td class="accent2">#F7E9CF</td>
-          <td class="accent3">#D9F4F3</td>
+          <td class="primary">#4a5292</td>
+          <td class="secondary">#af6c6c</td>
+          <td class="accent1">#1a2796</td>
+          <td class="accent2">#a70b0b</td>
+          <td class="accent3">white</td>
           <td class="accent4">black</td>
-          <td class="accent5">#B4091E</td>
         </tr>
       </table>
 
@@ -97,22 +96,22 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Vision</a>       <a href="#">Vision</a>
-        <a href="#">Steps</a>
+        <a href="#">HIS HOME</a>       <a href="#">HIS PRINCIPLES</a>
+        <a href="#">HIS PLAN</a>
       </nav>
       <hr>
       <h2>
         Site Map
       </h2>
       <div class="sitemap">
-        <div class="sm-Vision">
-          Vision
+        <div class="sm-his-home">
+          HIS HOME
         </div>
-        <div class="sm-page2">
-          Reconnect <!-- change this -->
+        <div class="sm-his-principles">
+          HIS PRINCIPLES <!-- change this -->
         </div>
-        <div class="sm-page3">
-          Action  <!-- change this -->
+        <div class="sm-his-plan">
+          HIS PLAN  <!-- change this -->
         </div>
 
         <div class="top">
@@ -135,11 +134,12 @@
       <div class="content">
         <h3>Vision</h3>
         <p>
-          Have you ever felt trapped with now way out of your current situation? Have you ever felt like you were living in and yet missing out on your own life? Right here and right now is exactly where you need to begin. Take a measure of where you are at in comparison to where you would like to be. Are you far away? How far? What is different about future you versus you today? What characteristics are different? Now take a leap of faith: adjust your vision to be only the internal characteristics. In other words, "Who do you want to be? What do you want to feel about yourself, others, your principles, and maybe even your deity?" 
+          Allow me to introduce you to my God. First and foremost, meet his son. Bring your chains. He'll break them if you want him to. After that, he'll lead us to his Father. The Holy Ghost you have already received or which you may choose to receive will act as a kind of omnipresent mediator so Christ can connect us all on our individual and group lines. Haven't received the Holy Ghost yet? No worries. The Holy Ghost is a gift from God available to anyone willing to be administered to by the bearers of his Holy Priesthood. They are available to be contacted at https://www.churchofjesuschrist.org/comeuntochrist/lp/meet-with-missionaries/short?cid=C15856363587G138717384858A602705674974&adlang=eng&source=google&network=g&gad_source=1&gclid=Cj0KCQiA3sq6BhD2ARIsAJ8MRwWKZBxyKiDoKaySou5XAL5nuex62_1lmsLrXBw5FffueaywmB8RY-0aAuv7EALw_wcB . These ministers also have plenty of introductory instructions for those who desire to walk with Christ in a safe, effective, and loving way. They will introduce you to the Church of Jesus Christ of Latter-day Saints, and instruct you in God's eternal love for you, The Restoration of His son's church, God's plan of Salvation, The Gospel of Jesus Christ, and God's continuing laws for peace in this life and eternal life in life to come. 
         </p>
-        <p>Images for the Vision page</p>
-          <img src="images/hopeful_path.jpg" alt="image for Vision page">
-          <img src="#" alt="image for Vision page">
+        <p>Images for the HIS HOME page</p>
+          <img src="images/Christ-breaking-chains.png" alt="image for HIS HOME page">
+          <img src="images/hopeful_path.jpg" alt="image for HIS HOME page">
+          <img src="images/Designer (2).jpeg" alt="image for HIS HOME page">
 
         </ul>
         <h3>Reconnect</h3>
