--- a/site-plan.html
+++ b/site-plan.html
@@ -48,18 +48,13 @@
           <th>Secondary</th>
           <th>Accent 1</th>
           <th>Accent 2</th>
-          <th>Accent 3</th>
-          <th>Accent 4</th>
-          <th>Accent 5</th>
         </tr>
         <!-- Switch to the site-plan.css file and change your colors there. -->
         <tr>
-          <td class="primary">#4a5292</td>
-          <td class="secondary">#af6c6c</td>
-          <td class="accent1">#1a2796</td>
-          <td class="accent2">#a70b0b</td>
-          <td class="accent3">white</td>
-          <td class="accent4">black</td>
+          <td class="primary">#1a2796</td>
+          <td class="secondary">#a70b0b</td>
+          <td class="accent1">#4a5292</td>
+          <td class="accent2">#ffffff</td>
         </tr>
       </table>
 
@@ -96,8 +91,8 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">HIS HOME</a>       <a href="#">HIS PRINCIPLES</a>
-        <a href="#">HIS PLAN</a>
+        <a href="#">HIS HOME</a>       <a href="#">HIS PLAN</a>
+        <a href="#">HIS PRINCIPLES</a>
       </nav>
       <hr>
       <h2>
@@ -107,13 +102,12 @@
         <div class="sm-his-home">
           HIS HOME
         </div>
-        <div class="sm-his-principles">
-          HIS PRINCIPLES <!-- change this -->
-        </div>
         <div class="sm-his-plan">
           HIS PLAN  <!-- change this -->
         </div>
-
+        <div class="sm-his-principles">
+          HIS PRINCIPLES <!-- change this -->
+        </div>
         <div class="top">
           &nbsp;
         </div>
@@ -132,33 +126,26 @@
         Content
       </h2>
       <div class="content">
-        <h3>Vision</h3>
+        <h3>HIS HOME</h3>
         <p>
           Allow me to introduce you to my God. First and foremost, meet his son. Bring your chains. He'll break them if you want him to. After that, he'll lead us to his Father. The Holy Ghost you have already received or which you may choose to receive will act as a kind of omnipresent mediator so Christ can connect us all on our individual and group lines. Haven't received the Holy Ghost yet? No worries. The Holy Ghost is a gift from God available to anyone willing to be administered to by the bearers of his Holy Priesthood. They are available to be contacted at https://www.churchofjesuschrist.org/comeuntochrist/lp/meet-with-missionaries/short?cid=C15856363587G138717384858A602705674974&adlang=eng&source=google&network=g&gad_source=1&gclid=Cj0KCQiA3sq6BhD2ARIsAJ8MRwWKZBxyKiDoKaySou5XAL5nuex62_1lmsLrXBw5FffueaywmB8RY-0aAuv7EALw_wcB . These ministers also have plenty of introductory instructions for those who desire to walk with Christ in a safe, effective, and loving way. They will introduce you to the Church of Jesus Christ of Latter-day Saints, and instruct you in God's eternal love for you, The Restoration of His son's church, God's plan of Salvation, The Gospel of Jesus Christ, and God's continuing laws for peace in this life and eternal life in life to come. 
         </p>
         <p>Images for the HIS HOME page</p>
           <img src="images/Christ-breaking-chains.png" alt="image for HIS HOME page">
-          <img src="images/hopeful_path.jpg" alt="image for HIS HOME page">
-          <img src="images/Designer (2).jpeg" alt="image for HIS HOME page">
-
         </ul>
-        <h3>Reconnect</h3>
-        <p>
-          [Written copy for the Page 2 here]
-        </p>
-        <p>Images for the Page 2</p>
-          <img src="#" alt="image for page">
-          <img src="#" alt="image for page">
-
-        </ul>
-        <h3>Action</h3>
+        <h3>HIS PLAN</h3>
         <p>
           [Written copy for the Page 3 here]
         </p>
         <p>Images for the Page 3</p>
-          <img src="#" alt="image for page3">
-          <img src="#" alt="image for page3">
-
+        <img src="images/hopeful_path.jpg" alt="image for HIS PLAN page">
+        </ul>
+        <h3>HIS PRINCIPLES</h3>
+        <p>
+          [Written copy for the Page 2 here]
+        </p>
+        <p>Images for the Page 2</p>
+        <img src="images/Designer (2).jpeg" alt="image for HIS PRINCIPLES page">
         </ul>
       </div>
       <hr>
