Changed Colors and messages

--- a/site-plan.html
+++ b/site-plan.html
@@ -10,8 +10,8 @@
   <body class="background">
     <header>
       <h1>My God 101</h1>
-      <h2>Riley Armstrong</h2>
-      <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
+      <h2>Riley Armstrong WDD 130.01 </h2>
+      <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main class="background">
 
