--- a/god.html
+++ b/god.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Holy Ghost</title>
+    <title>God</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -17,29 +17,20 @@
             <a href="heavenlyfather.html">God</a>
         </nav>
     </header>
-    <main class="home-grid">
-        <img src="" alt="light image">
-        <h1>Holy Ghost</h1>
-        <section class="section1">
+    <main class="god-grid">
+        <img src="" alt="family image">
+        <h1>God</h1>
+        <section>
             <h2>Purpose</h2>
             <p>Purpose text</p>
-            <img src="" alt="paul image">
-            <p>Paul text</p>
         </section>
         <section>
-            <h2>Recognition</h2>
-            <p>recognition text</p>
+            <h2>Love</h2>
+            <p>Love text</p>
         </section>
         <section>
-            <h2>Memory</h2>
-            <p>memory text</p>
-        </section>
-        <section>
-            <h2>Connect with Christ</h2>
-            <p>connect with christ text</p>
-            <a href="jesuschrist.html">
-                <img src="" alt="Image of Christ">
-            </a>
+            <h2>He Remembers Us</h2>
+            <p>He Remembers Us text</p>
         </section>
     </main>
     <footer>
