--- a/jesus-christ.html
+++ b/jesus-christ.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Holy Ghost</title>
+    <title>Jesus Christ</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -17,28 +17,26 @@
             <a href="heavenlyfather.html">God</a>
         </nav>
     </header>
-    <main class="home-grid">
-        <img src="" alt="light image">
-        <h1>Holy Ghost</h1>
-        <section class="section1">
-            <h2>Purpose</h2>
-            <p>Purpose text</p>
-            <img src="" alt="paul image">
-            <p>Paul text</p>
+    <main class="jc-grid">
+        <h1>Jesus Christ</h1>
+        <img src="" alt="christ image">
+        <section>
+            <h2>Who</h2>
+            <p>Who text</p>
         </section>
         <section>
-            <h2>Recognition</h2>
-            <p>recognition text</p>
+            <h2>How</h2>
+            <p>How text</p>
         </section>
         <section>
-            <h2>Memory</h2>
-            <p>memory text</p>
+            <h2>Why</h2>
+            <p>Why text</p>
         </section>
         <section>
-            <h2>Connect with Christ</h2>
-            <p>connect with christ text</p>
-            <a href="jesuschrist.html">
-                <img src="" alt="Image of Christ">
+            <h2>Connect with God (Your Heavenly Father)</h2>
+            <p>Connect with God text</p>
+            <a href="heavenlyfather.html">
+                <img src="" alt="Image of God & Jesus Christ (Restoration Picture)">
             </a>
         </section>
     </main>
