--- a/site-plan.html
+++ b/site-plan.html
@@ -91,22 +91,22 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">HIS HOME</a>       <a href="#">HIS PLAN</a>
-        <a href="#">HIS PRINCIPLES</a>
+        <a href="#">Holy Ghost</a>       <a href="#">Jesus Christ</a>
+        <a href="#">God</a>
       </nav>
       <hr>
       <h2>
         Site Map
       </h2>
       <div class="sitemap">
-        <div class="sm-his-home">
-          HIS HOME
+        <div class="sm-holyg-ghost">
+          Holy Ghost
         </div>
-        <div class="sm-his-plan">
-          HIS PLAN  <!-- change this -->
+        <div class="sm-jesus-christ">
+          Jesus Christ  <!-- change this -->
         </div>
-        <div class="sm-his-principles">
-          HIS PRINCIPLES <!-- change this -->
+        <div class="sm-heavenly-father">
+          God <!-- change this -->
         </div>
         <div class="top">
           &nbsp;
@@ -126,26 +126,24 @@
         Content
       </h2>
       <div class="content">
-        <h3>HIS HOME</h3>
+        <h3>Holy Ghost</h3>
         <p>
-          Allow me to introduce you to my God. First and foremost, meet his son. Bring your chains. He'll break them if you want him to. After that, he'll lead us to his Father. The Holy Ghost you have already received or which you may choose to receive will act as a kind of omnipresent mediator so Christ can connect us all on our individual and group lines. Haven't received the Holy Ghost yet? No worries. The Holy Ghost is a gift from God available to anyone willing to be administered to by the bearers of his Holy Priesthood. They are available to be contacted at https://www.churchofjesuschrist.org/comeuntochrist/lp/meet-with-missionaries/short?cid=C15856363587G138717384858A602705674974&adlang=eng&source=google&network=g&gad_source=1&gclid=Cj0KCQiA3sq6BhD2ARIsAJ8MRwWKZBxyKiDoKaySou5XAL5nuex62_1lmsLrXBw5FffueaywmB8RY-0aAuv7EALw_wcB . These ministers also have plenty of introductory instructions for those who desire to walk with Christ in a safe, effective, and loving way. They will introduce you to the Church of Jesus Christ of Latter-day Saints, and instruct you in God's eternal love for you, The Restoration of His son's church, God's plan of Salvation, The Gospel of Jesus Christ, and God's continuing laws for peace in this life and eternal life in life to come. 
+          Introduction to Holy Ghost
         </p>
-        <p>Images for the HIS HOME page</p>
-          <img src="images/Christ-breaking-chains.png" alt="image for HIS HOME page">
+        <p>Images for the Holy Ghost page</p>
+          <img src="images/holy-ghost.jpg" alt="image for Holy Ghost page">
         </ul>
-        <h3>HIS PLAN</h3>
+        <h3>Jesus Christ</h3>
         <p>
-          [Written copy for the Page 3 here]
+          Introduction to Jesus Christ
         </p>
         <p>Images for the Page 3</p>
-        <img src="images/hopeful_path.jpg" alt="image for HIS PLAN page">
+        <img src="images/jesus-christ.jpg" alt="image for Jesus Christ page">
         </ul>
-        <h3>HIS PRINCIPLES</h3>
-        <p>
-          [Written copy for the Page 2 here]
-        </p>
+        <h3>God</h3>
+        <p>Introduction to God</p>
         <p>Images for the Page 2</p>
-        <img src="images/Designer (2).jpeg" alt="image for HIS PRINCIPLES page">
+        <img src="images/heavenly-father.jpg" alt="image for God page">
         </ul>
       </div>
       <hr>
@@ -155,23 +153,23 @@
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
 
-      <h3>Vision</h3>
+      <h3>Holy Ghost</h3>
       <p>         
-        [Any additional details about Vision that the wireframe does not make clear]
+        [Any additional details about Holy Ghost that the wireframe does not make clear]
       </p>
-      <img src="#" alt="Vision page wireframe">
+      <img src="images/holy-ghost-wire.jpg" alt="Vision page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Jesus Christ</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/jesus-christ-wire.jpg" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>God, the Father</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/holy-ghost-wire.jpg" alt="page 3 wireframe">
     </main>
   </body>
 
