--- a/god.html
+++ b/god.html
@@ -38,7 +38,7 @@
         <a href="siteplan.html">Site Plan</a>
         <div class="social">
             <a href="">
-                <img src="" alt="social image">
+                <img src="images/heavenly-father.jpg" alt="social image">
             </a>
         </div>
     </footer>
