--- a/jesus-christ.html
+++ b/jesus-christ.html
@@ -36,7 +36,7 @@
             <h2>Connect with God (Your Heavenly Father)</h2>
             <p>Connect with God text</p>
             <a href="heavenlyfather.html">
-                <img src="" alt="Image of God & Jesus Christ (Restoration Picture)">
+                <img src="images/jesus-christ-wire.jpg" alt="Image of God & Jesus Christ (Restoration Picture)">
             </a>
         </section>
     </main>
