--- a/site-plan.html
+++ b/site-plan.html
@@ -132,7 +132,7 @@
         </p>
         <p>Images for the Holy Ghost page</p>
           <img src="images/holy-ghost.jpg" alt="image for Holy Ghost page">
-        </ul>
+          <img src="images/paul.jpg" alt="image of the Apostle, Paul">
         <h3>Jesus Christ</h3>
         <p>
           Introduction to Jesus Christ
