--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="" alt="Logo image">
+            <img src="images/broken-chains.png" alt="Logo image">
         </a>
         <nav>
             <a href="jesuschrist.html">Jesus Christ</a>
@@ -23,7 +23,7 @@
         <section class="section1">
             <h2>Purpose</h2>
             <p>Purpose text</p>
-            <img src="" alt="paul image">
+            <img src="images/paul.jpg" alt="paul image">
             <p>Paul text</p>
         </section>
         <section>
@@ -38,7 +38,7 @@
             <h2>Connect with Christ</h2>
             <p>connect with christ text</p>
             <a href="jesuschrist.html">
-                <img src="" alt="Image of Christ">
+                <img src="images/jesus-christ.jpg" alt="Image of Christ">
             </a>
         </section>
     </main>
