--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>Connect with Christ</h2>
             <p>connect with christ text</p>
             <a href="jesuschrist.html">
-                <img src="images/jesus-christ.jpg" alt="Image of Christ">
+                <img src="images/holy-ghost.jpg" alt="Image of Christ">
             </a>
         </section>
     </main>
