--- a/god.html
+++ b/god.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main class="god-grid">
-        <img src="" alt="family image">
+        <img src="images/heavenly-father.jpg" alt="family image">
         <h1>God</h1>
         <section>
             <h2>Purpose</h2>
@@ -38,7 +38,7 @@
         <a href="siteplan.html">Site Plan</a>
         <div class="social">
             <a href="">
-                <img src="images/heavenly-father.jpg" alt="social image">
+                <img src="" alt="social image">
             </a>
         </div>
     </footer>
