--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main class="home-grid">
-        <img src="" alt="light image">
+        <img src="images/holy-ghost.jpg" alt="light image">
         <h1>Holy Ghost</h1>
         <section class="section1">
             <h2>Purpose</h2>
@@ -38,7 +38,7 @@
             <h2>Connect with Christ</h2>
             <p>connect with christ text</p>
             <a href="jesuschrist.html">
-                <img src="images/holy-ghost.jpg" alt="Image of Christ">
+                <img src="images/jesus-christ.jpg" alt="Image of Christ">
             </a>
         </section>
     </main>
