--- a/jesus-christ.html
+++ b/jesus-christ.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="" alt="Logo image">
+            <img src="images/broken-chains.png" alt="Logo image">
         </a>
         <nav>
             <a href="jesuschrist.html">Jesus Christ</a>
@@ -19,7 +19,7 @@
     </header>
     <main class="jc-grid">
         <h1>Jesus Christ</h1>
-        <img src="" alt="christ image">
+        <img src="images/jesus-christ-wire.jpg" alt="christ image">
         <section>
             <h2>Who</h2>
             <p>Who text</p>
@@ -36,7 +36,7 @@
             <h2>Connect with God (Your Heavenly Father)</h2>
             <p>Connect with God text</p>
             <a href="heavenlyfather.html">
-                <img src="images/jesus-christ-wire.jpg" alt="Image of God & Jesus Christ (Restoration Picture)">
+                <img src="images/heavenly-father.jpg" alt="Image of God">
             </a>
         </section>
     </main>
