copyright and images

--- a/jesus-christ.html
+++ b/jesus-christ.html
@@ -44,8 +44,8 @@
         <p>Riley Armstrong &copy; 2024</p>
         <a href="siteplan.html">Site Plan</a>
         <div class="social">
-            <a href="">
-                <img src="" alt="social image">
+            <a href="https://www.facebook.com/">
+                <img src="images/facebook.jpg" alt="Facebook">
             </a>
         </div>
     </footer>
