--- a/god.html
+++ b/god.html
@@ -22,15 +22,15 @@
         <h1>God</h1>
         <section>
             <h2>Purpose</h2>
-            <p>Purpose text</p>
+            <p>To introduce you to our Heavenly Father</p>
         </section>
         <section>
             <h2>Love</h2>
-            <p>Love text</p>
+            <p>John 3:16 ¶ For God so loved the world, that he gave his only begotten Son, that whosoever believeth in him should not perish, but have everlasting life.</p>
         </section>
         <section>
             <h2>He Remembers Us</h2>
-            <p>He Remembers Us text</p>
+            <p>An exerpt from the Title Page of the Book of Mormon Another Testament of Jesus Christ. "Which is to show unto the remnant of the house of Israel what great things the Lord hath done for their fathers; and that they may know the covenants of the Lord, that they are not cast off forever."</p>
         </section>
     </main>
     <footer>
