--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
         <h1>Holy Ghost</h1>
         <section class="section1">
             <h2>Purpose</h2>
-            <p>Purpose text</p>
+            <p>To introduce you to the Holy Ghost</p>
             <img src="images/paul.jpg" alt="paul image">
-            <p>Paul text</p>
+            <p>About the fruit of the Holy Spirit, Paul said the following: "But the fruit of the Spirit is love, joy, peace, longsuffering, gentleness, goodness, faith, Meekness, temperance: against such there is no law. (Galatians 5:22)</p>
         </section>
         <section>
             <h2>Recognition</h2>
-            <p>recognition text</p>
+            <p>Applied to you: think back on times in your life where you have felt these feelings. You can be sure that these feelings were enabled by the Holy Ghost, or in another words, were the fruits of the Spirit you were able to taste.</p>
         </section>
         <section>
             <h2>Memory</h2>
-            <p>memory text</p>
+            <p>Dive into these memories. Remember who you were at the time, those whom you were with, how you were living, and who you became as a result. Therein lie seeds of the Holy Spirit of God.</p>
         </section>
         <section>
             <h2>Connect with Christ</h2>
-            <p>connect with christ text</p>
+            <p>Jeus Christ is our Savior. He felt those feelings with you. In addition, he felt all of your negative feelings as though they were his own. This he did and, with the Spirit, accompanies you on your journey. Let's get to know him a bit better.</p>
             <a href="jesuschrist.html">
                 <img src="images/jesus-christ.jpg" alt="Image of Christ">
             </a>
