--- a/jesus-christ.html
+++ b/jesus-christ.html
@@ -22,15 +22,15 @@
         <img src="images/jesus-christ-wire.jpg" alt="christ image">
         <section>
             <h2>Who</h2>
-            <p>Who text</p>
+            <p>Jesus Christ is the son of almight God. He was sent to do the will of his Father. This will of the Father was to bring about the immortality and eternal life of man. Christ is one with his Father and therefore, adopts all of the Father's will as his own.</p>
         </section>
         <section>
             <h2>How</h2>
-            <p>How text</p>
+            <p>He did this by living a sinless life and performing his great atoning sacrifice. In other words, he spent his entire life accompanied by His Heavenly Father's Spirit and never once intentionally departed from Him. This Father figure is also your Heavenly Father. </p>
         </section>
         <section>
             <h2>Why</h2>
-            <p>Why text</p>
+            <p>Life on earth can be difficult. As a result, we are often taken to blame Heavenly Father for all our trials. Knowing this, Jesus Christ adopted the will of the Father as his own and suffered all your pains, sins, transgressions, and so on. This great act of love enables Christ with the convincing power to convince you that His Father is indeed, as John, the beloved, proclaimed, love itself.</p>
         </section>
         <section>
             <h2>Connect with God (Your Heavenly Father)</h2>
