--- a/god.html
+++ b/god.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="/images/broken-chains.png" alt="Logo image">
+            <img src="images/broken-chains.png" alt="Logo image">
         </a>
         <nav>
-            <a href="jesuschrist.html">Jesus Christ</a>
-            <a href="heavenlyfather.html">God</a>
+            <a href="jesus-christ.html">Jesus Christ</a>
+            <a href="god.html">God</a>
         </nav>
     </header>
     <main class="god-grid">
@@ -35,7 +35,7 @@
     </main>
     <footer>
         <p>Riley Armstrong &copy; 2024</p>
-        <a href="siteplan.html">Site Plan</a>
+        <a href="site-plan.html">Site Plan</a>
         <div class="social">
             <a href="https://www.facebook.com/">
                 <img src="images/facebook.jpg" alt="Facebook">
