--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <img src="images/broken-chains.png" alt="Logo image">
         </a>
         <nav>
-            <a href="jesuschrist.html">Jesus Christ</a>
-            <a href="heavenlyfather.html">God</a>
+            <a href="jesus-christ.html">Jesus Christ</a>
+            <a href="god.html">God</a>
         </nav>
     </header>
     <main class="home-grid">
@@ -37,14 +37,14 @@
         <section>
             <h2>Connect with Christ</h2>
             <p>Jeus Christ is our Savior. He felt those feelings with you. In addition, he felt all of your negative feelings as though they were his own. This he did and, with the Spirit, accompanies you on your journey. Let's get to know him a bit better.</p>
-            <a href="jesuschrist.html">
+            <a href="jesus-christ.html">
                 <img src="images/jesus-christ.jpg" alt="Image of Christ">
             </a>
         </section>
     </main>
     <footer>
         <p>Riley Armstrong &copy; 2024</p>
-        <a href="siteplan.html">Site Plan</a>
+        <a href="site-plan.html">Site Plan</a>
         <div class="social">
             <a href="https://www.facebook.com/">
                 <img src="images/facebook.jpg" alt="Facebook">
