--- a/jesus-christ.html
+++ b/jesus-christ.html
@@ -13,13 +13,13 @@
             <img src="images/broken-chains.png" alt="Logo image">
         </a>
         <nav>
-            <a href="jesuschrist.html">Jesus Christ</a>
-            <a href="heavenlyfather.html">God</a>
+            <a href="jesus-christ.html">Jesus Christ</a>
+            <a href="god.html">God</a>
         </nav>
     </header>
     <main class="jc-grid">
         <h1>Jesus Christ</h1>
-        <img src="images/jesus-christ-wire.jpg" alt="christ image">
+        <img src="images/jesus-christ.jpg" alt="christ image">
         <section>
             <h2>Who</h2>
             <p>Jesus Christ is the son of almight God. He was sent to do the will of his Father. This will of the Father was to bring about the immortality and eternal life of man. Christ is one with his Father and therefore, adopts all of the Father's will as his own.</p>
@@ -35,14 +35,14 @@
         <section>
             <h2>Connect with God (Your Heavenly Father)</h2>
             <p>Connect with God text</p>
-            <a href="heavenlyfather.html">
+            <a href="god.html">
                 <img src="images/heavenly-father.jpg" alt="Image of God">
             </a>
         </section>
     </main>
     <footer>
         <p>Riley Armstrong &copy; 2024</p>
-        <a href="siteplan.html">Site Plan</a>
+        <a href="site-plan.html">Site Plan</a>
         <div class="social">
             <a href="https://www.facebook.com/">
                 <img src="images/facebook.jpg" alt="Facebook">
