home page finished

--- a/god.html
+++ b/god.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="images/broken-chains.png" alt="Logo image">
+            <img id="logo" src="images/broken-chains.png" alt="Logo image">
         </a>
         <nav>
             <a href="jesus-christ.html">Jesus Christ</a>
