--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="images/broken-chains.png" alt="Logo image">
+            <img id="logo" src="images/broken-chains.png" alt="Logo image">
         </a>
         <nav>
             <a href="jesus-christ.html">Jesus Christ</a>
@@ -18,12 +18,12 @@
         </nav>
     </header>
     <main class="home-grid">
-        <img src="images/holy-ghost.jpg" alt="light image">
-        <h1>Holy Ghost</h1>
-        <section class="section1">
+        <img class="hg" src="images/holy-ghost.jpg" alt="light image">
+        <h1 class="hg-hero">Holy Ghost</h1>
+        <section class="paul">
+          <img src="images/paul.jpg" alt="paul image">
             <h2>Purpose</h2>
             <p>To introduce you to the Holy Ghost</p>
-            <img src="images/paul.jpg" alt="paul image">
             <p>About the fruit of the Holy Spirit, Paul said the following: "But the fruit of the Spirit is love, joy, peace, longsuffering, gentleness, goodness, faith, Meekness, temperance: against such there is no law. (Galatians 5:22)</p>
         </section>
         <section>
@@ -34,9 +34,9 @@
             <h2>Memory</h2>
             <p>Dive into these memories. Remember who you were at the time, those whom you were with, how you were living, and who you became as a result. Therein lie seeds of the Holy Spirit of God.</p>
         </section>
-        <section>
+        <section class="christ">
             <h2>Connect with Christ</h2>
-            <p>Jeus Christ is our Savior. He felt those feelings with you. In addition, he felt all of your negative feelings as though they were his own. This he did and, with the Spirit, accompanies you on your journey. Let's get to know him a bit better.</p>
+            <p>Jesus Christ is our Savior. He felt those feelings with you. In addition, he felt all of your negative feelings as though they were his own. This he did and, with the Spirit, accompanies you on your journey. Let's get to know him a bit better.</p>
             <a href="jesus-christ.html">
                 <img src="images/jesus-christ.jpg" alt="Image of Christ">
             </a>
